--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,6 +5,7 @@ androidxComposeBom = "2025.06.01"
 kotlin = "2.1.21"
 kotlinxSerialization = "1.8.1"
 retrofit = "3.0.0"
+timber = "5.0.1"
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "android" }
@@ -20,3 +21,4 @@ androidx-compose-material-icons = { group = "androidx.compose.material", name = 
 kotlinx-serialization = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinxSerialization" }
 retrofit-core = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
 retrofit-serialization = { group = "com.squareup.retrofit2", name = "converter-kotlinx-serialization", version.ref = "retrofit" }
+timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "timber" }
